@@ -1,3 +1,8 @@
+2008-12-28  Helmut Eller  <heller@common-lisp.net>
+
+	* swank-openmcl.lisp (function-source-location): Use
+	ccl:function-source-note.
+
 2008-12-27  Helmut Eller  <heller@common-lisp.net>
 
 	* slime.el: Move slime-lisp-package and
